# Flynrut

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  taks.md
.claude/skills/: rust-ide.md  tdd.md
docs/: book.toml
docs/src/: SUMMARY.md  introducao.md
docs/src/configuracao/: config-toml.md  variaveis.md
docs/src/desenvolvimento/: arquitetura.md  changelog.md  contribuindo.md  modulos.md
docs/src/extensoes/: criar.md  instalar.md  manifesto.md  visao-geral.md
docs/src/inicio/: instalacao.md  interface.md  primeiro-uso.md
docs/src/integracoes/: ai.md  docker.md  git.md  lsp.md
docs/src/referencia/: glossario.md  troubleshooting.md
docs/src/temas/: customizado.md  embutidos.md  tokens.md
docs/src/uso/: arvore-arquivos.md  atalhos.md  editor.md  status.md
examples/config/: config.toml  keybindings.toml  my-extension.toml  my-theme.toml
src/: lib.rs  main.rs
src/app/: mod.rs
src/config/: mod.rs
src/editor/: mod.rs
src/extensions/: mod.rs
src/fs_tree/: mod.rs
src/gui/: editor.rs  file_tree.rs  mod.rs  sidebar.rs  style.rs
src/integrations/: mod.rs
src/keybindings/: mod.rs
src/lsp/: mod.rs
src/theme/: mod.rs
src/ui/: mod.rs
