[package]
name = "rust_ide"
version = "0.1.0"
edition = "2024"
authors = ["angel"]
description = "Modular, fast terminal IDE with native git, LSP, lazygit, lazydocker, MCP and AI integration"
keywords = ["ide", "tui", "editor", "lsp", "git"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
license = "MIT"

[lib]
name = "rust_ide"
path = "src/lib.rs"

[[bin]]
name = "rust-ide"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.102"
crossterm = "0.28.1"
directories = "6.0.0"
git2 = "0.20.4"
lsp-types = "0.97.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
tui-textarea = "0.7.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
