[package]
name = "rust_ide"
version = "0.2.0"
edition = "2024"
authors = ["angel"]
description = "Modular, fast GUI IDE with native git, LSP, lazygit, lazydocker, MCP and AI integration"
keywords = ["ide", "gui", "editor", "lsp", "git"]
categories = ["gui", "development-tools"]
readme = "README.md"
license = "MIT"

[lib]
name = "rust_ide"
path = "src/lib.rs"

[[bin]]
name = "rust-ide"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
git2 = "0.20.4"
iced = { version = "0.14.0", features = ["advanced", "svg", "wgpu"] }
lsp-types = "0.97.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syntect = { version = "5.2.0", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
toml = "1.1.2"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
